# MCRouter

./: Cargo.toml  LICENSE  config.toml
src/: config.rs  handler.rs  main.rs  packet.rs  proxy.rs
