[package]
name = "MCRouter"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"
hyper = { version = "1.6.0", features = ["full"] }
clap = { version = "4.5.40", features = ["derive"] }